--- a/config/templates/elasticsearch-db.yaml
+++ b/config/templates/elasticsearch-db.yaml
@@ -30,14 +30,14 @@ spec:
                   - name: elasticsearch
                     env:
                       - name: ES_JAVA_OPTS
-                        value: '-Xms{{ .spec.heap | default "2Gi" | strings.ReplaceAll "Ki" "k" | strings.ReplaceAll "Mi" "m" | strings.ReplaceAll "Gi" "g"  }} -Xmx{{ .spec.mem.requests | default "2Gi" | strings.ReplaceAll "Ki" "k" | strings.ReplaceAll "Mi" "m" | strings.ReplaceAll "Gi" "g" }}'
+                        value: '-Xms {{ .spec.heap | default "2Gi" | strings.ReplaceAll "Ki" "k" | strings.ReplaceAll "Mi" "m" | strings.ReplaceAll "Gi" "g"  }} -Xmx {{ .spec.mem.requests | default "2Gi" | strings.ReplaceAll "Ki" "k" | strings.ReplaceAll "Mi" "m" | strings.ReplaceAll "Gi" "g" }}'
                     resources:
                       requests:
                         memory: '{{ .spec.resources.requests.memory | default "2Gi" }}'
                         cpu: '{{ .spec.resources.requests.cpu | default "500m" }}'
                       limits:
                         memory: '{{ .spec.resources.limits.memory | default "3Gi" }}'
-                        cpu: '{{ specs.resources.limits.cpu | default "2" }}'
+                        cpu: '{{ .spec.resources.limits.cpu | default "2" }}'
             volumeClaimTemplates:
               - metadata:
                   name: elasticsearch-data
@@ -65,7 +65,7 @@ spec:
       metadata:
         name: '{{ .metadata.name }}-ingress'
         namespace: '{{ .metadata.namespace }}'
-        annotations: '{ .spec.ingress.annotations | coll.Merge (coll.Dict "nginx.ingress.kubernetes.io/backend-protocol" "HTTPS" "nginx.ingress.kubernetes.io/client_max_body_size" "64m" "kubernetes.io/tls-acme" "true") | data.ToJSON }}'
+        annotations: '{{ .spec.ingress.annotations | default coll.Dict | coll.Merge (coll.Dict "nginx.ingress.kubernetes.io/backend-protocol" "HTTPS" "nginx.ingress.kubernetes.io/client_max_body_size" "64m" "kubernetes.io/tls-acme" "true") | data.ToJSON }}'
       spec:
         tls:
           - secretName: '{{ .metadata.name }}-tls'
@@ -76,14 +76,14 @@ spec:
             http:
               paths:
                 - backend:
-                    serviceName: '{{ .metadata.name }}-http'
+                    serviceName: '{{ .metadata.name }}-es-http'
                     servicePort: 9200
     - apiVersion: extensions/v1beta1
       kind: Ingress
       metadata:
         name: '{{ .metadata.name }}-kibana-ingress'
         namespace: '{{ .metadata.namespace }}'
-        annotations: '{ .spec.ingress.annotations | coll.Merge (coll.Dict "nginx.ingress.kubernetes.io/backend-protocol" "HTTPS" "kubernetes.io/tls-acme" "true") | data.ToJSON }}'
+        annotations: '{{ .spec.ingress.annotations | default coll.Dict | coll.Merge (coll.Dict "nginx.ingress.kubernetes.io/backend-protocol" "HTTPS" "kubernetes.io/tls-acme" "true") | data.ToJSON }}'
       spec:
         tls:
           - secretName: '{{ .metadata.name }}-kibana-tls'
@@ -94,5 +94,5 @@ spec:
             http:
               paths:
                 - backend:
-                    serviceName: '{{ .metadata.name }}-kb-http'
+                    serviceName: '{{ .metadata.name }}-kibana-kb-http'
                     servicePort: 5601
