--- a/config/templates/redis-db.yaml
+++ b/config/templates/redis-db.yaml
@@ -14,21 +14,23 @@ spec:
         namespace: "{{.metadata.namespace}}"
       spec:
         sentinel:
-          replicas: '{{.spec.sentinelReplicas | default "3"}}'
+          replicas: '{{.spec.sentinel.replicas | default "3"}}'
           resources:
             requests:
-              cpu: '{{.spec.sentinelCPU | default "100m"}}'
+              cpu: '{{.spec.sentinel.resources.requests.cpu | default "100m"}}'
+              memory: '{{.spec.sentinel.resources.requests.memory | default "100Mi"}}'
             limits:
-              memory: '{{.spec.sentinelMemory | default "100Mi"}}'
+              cpu: '{{.spec.sentinel.resources.limits.cpu | default "100m"}}'
+              memory: '{{.spec.sentinel.resources.limits.memory | default "100Mi"}}'
         redis:
-          replicas: '{{.spec.replicas | default "3"}}'
+          replicas: '{{.spec.redis.replicas | default "3"}}'
           resources:
             requests:
-              cpu: '{{.spec.cpu | default "100m"}}'
-              memory: '{{.spec.memory | default "500Mi"}}'
+              cpu: '{{.spec.redis.resources.requests.cpu | default "100m"}}'
+              memory: '{{.spec.redis.resources.requests.memory | default "500Mi"}}'
             limits:
-              cpu: '{{.spec.cpu | default "100m"}}'
-              memory: '{{.spec.memory | default "500Mi"}}'
+              cpu: '{{.spec.redis.resources.limits.cpu | default "100m"}}'
+              memory: '{{.spec.redis.resources.limits.memory | default "500Mi"}}'
           storage:
             persistentVolumeClaim:
               metadata:
