--- a/test/config.yaml
+++ b/test/config.yaml
@@ -42,6 +42,11 @@ s3:
   skipTLSVerify: true
 serviceSubnet: 10.201.0.0/16
 templateOperator:
-  version: v0.1.11
+  version: v0.1.12
+  syncPeriod: 20s
+platformOperator:
+  version: v0.6.6
+redisOperator:
+  version: v1.0.0
 eck:
   version: 1.0.0
