--- a/config/crd/db/db.flanksource.com_redisdbs.yaml
+++ b/config/crd/db/db.flanksource.com_redisdbs.yaml
@@ -112,6 +112,33 @@ spec:
             - redis
             - sentinel
             type: object
+          status:
+            properties:
+              conditions:
+                items:
+                  properties:
+                    lastHeartbeatTime:
+                      format: date-time
+                      type: string
+                    lastTransitionTime:
+                      format: date-time
+                      type: string
+                    message:
+                      type: string
+                    reason:
+                      type: string
+                    status:
+                      type: string
+                    type:
+                      type: string
+                  required:
+                  - status
+                  - type
+                  type: object
+                type: array
+            required:
+            - conditions
+            type: object
         type: object
     served: true
     storage: true
