--- a/config/crd/db/db.flanksource.com_postgresqldbs.yaml
+++ b/config/crd/db/db.flanksource.com_postgresqldbs.yaml
@@ -6,14 +6,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.0
   creationTimestamp: null
-  name: postgresdbs.db.flanksource.com
+  name: postgresqldbs.db.flanksource.com
 spec:
   group: db.flanksource.com
   names:
-    kind: PostgresDB
-    listKind: PostgresDBList
-    plural: postgresdbs
-    singular: postgresdb
+    kind: PostgresqlDB
+    listKind: PostgresqlDBList
+    plural: postgresqldbs
+    singular: postgresqldb
   scope: Namespaced
   versions:
   - name: v1
