--- a/config/templates/postgresql-db.yaml
+++ b/config/templates/postgresql-db.yaml
@@ -80,7 +80,7 @@ spec:
         resources:       
           limits:
             cpu: '{{.spec.resources.limits.cpu | default .spec.cpu | default "1000m"}}'
-            memory: '{{.spec.resources.limits.memory | default "512Mi"}}'
+            memory: '{{.spec.resources.limits.memory | default .spec.memory | default "512Mi"}}'
           requests:
             cpu: '{{.spec.resources.requests.cpu | default .spec.cpu |  default "100m"}}'
             memory: '{{.spec.resources.requests.memory | default .spec.memory  |   default "128Mi"}}'               
