--- a/config/templates/postgresql-db.yaml
+++ b/config/templates/postgresql-db.yaml
@@ -163,7 +163,7 @@ spec:
               spec:
                 containers:
                   - envFrom:
-                      - secretKeyRef:
+                      - secretRef:
                           name: backup-postgres-{{ .metadata.name }}-config
                     env:
                       - name: RESTIC_REPOSITORY
@@ -185,7 +185,7 @@ spec:
                         value: postgres
                       - name: PG_VERSION
                         value: "12"
-                    image: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_SCHEDULE" }}'
+                    image: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_IMAGE" }}'
                     imagePullPolicy: IfNotPresent
                     name: backup-postgres-{{.metadata.name}}
                     resources:
@@ -201,7 +201,7 @@ spec:
                 restartPolicy: Never
                 schedulerName: default-scheduler
                 terminationGracePeriodSeconds: 30
-        schedule: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_IMAGE" }}'
+        schedule: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_SCHEDULE" }}'
         successfulJobsHistoryLimit: 3
         suspend: false
     - apiVersion: canaries.flanksource.com/v1
