--- a/config/templates/redis-db.yaml
+++ b/config/templates/redis-db.yaml
@@ -14,6 +14,7 @@ spec:
         namespace: "{{.metadata.namespace}}"
       spec:
         sentinel:
+          image: 'docker.io/library/redis:{{ .spec.version | default "5.0-alpine" }}'
           replicas: '{{.spec.sentinel.replicas | default "3"}}'
           resources:
             requests:
@@ -23,6 +24,7 @@ spec:
               cpu: '{{.spec.sentinel.resources.limits.cpu | default "100m"}}'
               memory: '{{.spec.sentinel.resources.limits.memory | default "100Mi"}}'
         redis:
+          image: 'docker.io/library/redis:{{ .spec.version | default "5.0-alpine" }}'
           replicas: '{{.spec.redis.replicas | default "3"}}'
           resources:
             requests:
