--- a/config/crd/db/db.flanksource.com_postgresqldbs.yaml
+++ b/config/crd/db/db.flanksource.com_postgresqldbs.yaml
@@ -56,6 +56,12 @@ spec:
                   schedule:
                     type: string
                 type: object
+              cpu:
+                description: Deprecated
+                type: string
+              memory:
+                description: Deprecated
+                type: string
               parameters:
                 additionalProperties:
                   type: string
