--- a/config/templates/postgresql-db-v2.yaml
+++ b/config/templates/postgresql-db-v2.yaml
@@ -1,10 +1,10 @@
 apiVersion: templating.flanksource.com/v1
 kind: Template
 metadata:
-  name: postgresql-db
+  name: postgresql-db-v2
 spec:
   source:
-    apiVersion: db.flanksource.com/v1
+    apiVersion: db.flanksource.com/v2
     kind: PostgresqlDB
   resources:
     - apiVersion: acid.zalan.do/v1
@@ -57,7 +57,7 @@ spec:
             value: '{{.spec.backup.bucket}}'
           - name: CLONE_WAL_BUCKET_SCOPE_SUFFIX
             value: /
-        numberOfInstances: '{{ .spec.replicas }}'
+        numberOfInstances: '{{ .spec.replicas | default "2" }}'
         patroni:
           initdb:
             data-checksums: "true"
@@ -73,14 +73,9 @@ spec:
           synchronous_mode: false
           synchronous_mode_strict: false
           ttl: 30
-        podAnnotations:
-          com.flanksource.infra.logs/processors.0.drop_event.when.contains.message: "no action.  i am a secondary and i am following a leader"
-          com.flanksource.infra.logs/processors.1.drop_event.when.contains.message: "no action.  i am the leader with the lock"
-          com.flanksource.infra.logs/processors.2.drop_event.when.contains.message: "INFO: Lock owner:"
-          com.flanksource.infra.logs/processors.3.drop_event.when.contains.message: "INFO: does not have lock"
-          com.flanksource.infra.logs/processors.4.dissect.tokenizer: "%{date} %{time} %{TZ} [%{PID}] %{user} %{level}: %{log}"
+        podAnnotations: {}
         postgresql:
-          parameters: '{{ (coll.Dict "logging_collector" "false" "log_destination" "stderr" "log_line_prefix" "%m [%p] %q%u@%d " ) | coll.Merge ( .spec.parameters | default (coll.Dict) ) | data.ToJSON }}'
+          parameters: '{{ .spec.parameters | default (coll.Dict) | data.ToJSON }}'
           version: "12"
         resources:
           limits:
@@ -108,7 +103,7 @@ spec:
                     name: postgres.postgres-{{.metadata.name}}.credentials
               - name: PG_EXPORTER_EXTEND_QUERY_PATH
                 value: /opt/extra-queries/queries.yaml
-            image: docker.io/bitnami/postgres-exporter:0.9.0
+            image: docker.io/bitnami/postgres-exporter:0.8.0
             name: exporter
             ports:
               - containerPort: 9187
@@ -130,6 +125,26 @@ spec:
         volume:
           size: '{{ .spec.storage.size | default "20Gi" }}'
           storageClass: '{{ .spec.storage.storageClass | default "" }}'
+    - apiVersion: v1
+      kind: Secret
+      metadata:
+        name: backup-postgres-{{ .metadata.name }}-config
+        namespace: postgres-operator
+      data:
+        AWS_ACCESS_KEY_ID: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "AWS_ACCESS_KEY_ID" }}'
+        AWS_SECRET_ACCESS_KEY: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "AWS_SECRET_ACCESS_KEY" }}'
+        AWS_ENDPOINT_URL: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "AWS_ENDPOINT_URL" }}'
+        AWS_REGION: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "AWS_REGION" }}'
+        RESTIC_PASSWORD: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_PASSWORD" }}'
+        BACKUP_IMAGE: '{{ kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_IMAGE" }}'
+        BACKUP_S3_BUCKET: '{{ .spec.backup.bucket | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_S3_BUCKET") }}'
+        BACKUP_SCHEDULE: '{{ .spec.backup.schedule | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_SCHEDULE") }}'
+        BACKUP_RETENTION_KEEP_LAST: '{{ .spec.backup.retention.keepLast | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_LAST") }}'
+        BACKUP_RETENTION_KEEP_HOURLY: '{{ .spec.backup.retention.keepHourly | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_HOURLY") }}'
+        BACKUP_RETENTION_KEEP_DAILY: '{{ .spec.backup.retention.keepDaily | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_DAILY") }}'
+        BACKUP_RETENTION_KEEP_WEEKLY: '{{ .spec.backup.retention.keepWeekly | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_WEEKLY") }}'
+        BACKUP_RETENTION_KEEP_MONTHLY: '{{ .spec.backup.retention.keepMonthly | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_MONTHLY") }}'
+        BACKUP_RETENTION_KEEP_YEARLY: '{{ .spec.backup.retention.keepYearly | default (kget "secret/postgres-operator/postgres-operator-cluster-environment" "BACKUP_RETENTION_KEEP_YEARLY") }}'
     - apiVersion: batch/v1beta1
       kind: CronJob
       metadata:
@@ -139,23 +154,20 @@ spec:
         concurrencyPolicy: Forbid
         failedJobsHistoryLimit: 1
         jobTemplate:
-          metadata:
-            creationTimestamp: null
           spec:
             template:
               metadata:
-                creationTimestamp: null
                 labels:
-                  application: spilo-logical-backup
+                  application: postgres-logical-backup
                   cluster-name: postgres-{{.metadata.name}}
               spec:
                 containers:
-                  - env:
-                      - name: POD_NAMESPACE
-                        valueFrom:
-                          fieldRef:
-                            apiVersion: v1
-                            fieldPath: metadata.namespace
+                  - envFrom:
+                      - secretRef:
+                          name: backup-postgres-{{ .metadata.name }}-config
+                    env:
+                      - name: RESTIC_REPOSITORY
+                        value: s3:$(AWS_ENDPOINT_URL)/$(BACKUP_S3_BUCKET)
                       - name: PGPASSWORD
                         valueFrom:
                           secretKeyRef:
@@ -163,64 +175,19 @@ spec:
                             name: postgres.postgres-{{.metadata.name}}.credentials
                       - name: PGHOST
                         value: postgres-{{.metadata.name}}
-                      - name: AWS_SECRET_ACCESS_KEY
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_SECRET_ACCESS_KEY
-                            name: postgres-operator-cluster-environment
                       - name: PGPORT
                         value: "5432"
-                      - name: AWS_ACCESS_KEY_ID
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_ACCESS_KEY_ID
-                            name: postgres-operator-cluster-environment
-                      - name: AWS_SECRET_ACCESS_KEY
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_SECRET_ACCESS_KEY
-                            name: postgres-operator-cluster-environment
-                      - name: LOGICAL_BACKUP_S3_ENDPOINT
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_ENDPOINT_URL
-                            name: postgres-operator-cluster-environment
-                      - name: AWS_S3_FORCE_PATH_STYLE
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_S3_FORCE_PATH_STYLE
-                            name: postgres-operator-cluster-environment
-                      - name: LOGICAL_BACKUP_S3_REGION
-                        valueFrom:
-                          secretKeyRef:
-                            key: AWS_REGION
-                            name: postgres-operator-cluster-environment
-                      - name: SCOPE
-                        value: postgres-{{.metadata.name}}
                       - name: PGSSLMODE
                         value: prefer
                       - name: PGDATABASE
                         value: postgres
-                      - name: LOGICAL_BACKUP_S3_BUCKET
-                        value: '{{.spec.backup.bucket}}'
-                      - name: LOGICAL_BACKUP_S3_SSE
-                        value: AES256
-                      - name: PG_VERSION
-                        value: "12"
                       - name: PGUSER
                         value: postgres
-                      - name: CLUSTER_NAME_LABEL
-                        value: cluster-name
-                    image: docker.io/flanksource/postgres-backups:0.1.5
+                      - name: PG_VERSION
+                        value: "12"
+                    image: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_IMAGE" }}'
                     imagePullPolicy: IfNotPresent
                     name: backup-postgres-{{.metadata.name}}
-                    ports:
-                      - containerPort: 8080
-                        protocol: TCP
-                      - containerPort: 5432
-                        protocol: TCP
-                      - containerPort: 8008
-                        protocol: TCP
                     resources:
                       limits:
                         cpu: 500m
@@ -233,11 +200,8 @@ spec:
                 dnsPolicy: ClusterFirst
                 restartPolicy: Never
                 schedulerName: default-scheduler
-                securityContext: {}
-                serviceAccount: postgres-pod
-                serviceAccountName: postgres-pod
                 terminationGracePeriodSeconds: 30
-        schedule: '{{.spec.backup.schedule | default "0 2 * * *" }}'
+        schedule: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "BACKUP_SCHEDULE" }}'
         successfulJobsHistoryLimit: 3
         suspend: false
     - apiVersion: canaries.flanksource.com/v1
@@ -266,13 +230,13 @@ spec:
               name: postgres-operator-cluster-environment
         s3Bucket:
           - description: '{{.metadata.name}} (backup)'
-            bucket: '{{.spec.backup.bucket}}'
+            bucket: '{{ kget (print "secret/postgres-operator/backup-postgres-" .metadata.name "-config") "LOGICAL_BACKUP_S3_BUCKET" }}'
             region: $LOGICAL_BACKUP_S3_REGION
             endpoint: $AWS_ENDPOINT
             secretKey: $AWS_SECRET_ACCESS_KEY
             accessKey: $AWS_ACCESS_KEY_ID
             objectPath: postgres-{{.metadata.name}}
-            minSize: 10240 #10KiB
+            minSize: 10240 # 10KiB
             maxAge: 86400 # 24 hours
             usePathStyle: true
     - apiVersion: canaries.flanksource.com/v1
@@ -280,6 +244,10 @@ spec:
       metadata:
         name: postgres-connection-{{.metadata.name}}
         namespace: postgres-operator
+        annotations:
+          # don't let quack try and template username and password
+          quack.pusher.com/left-delim: '[['
+          quack.pusher.com/right-delim: ']]'
       spec:
         interval: 30
         env:
