--- a/config/templates/postgresql-db.yaml
+++ b/config/templates/postgresql-db.yaml
@@ -75,7 +75,7 @@ spec:
           ttl: 30
         podAnnotations: {}
         postgresql:
-          parameters: '{{ .spec.parameters | default (coll.Dict) | data.ToJSON }}'
+          parameters: '{{ (coll.Dict "logging_collector" "false" "log_destination" "stderr" "log_line_prefix" "%m [%p] %q%u@%d " ) | coll.Merge ( .spec.parameters | default (coll.Dict) ) | data.ToJSON }}'
           version: "12"
         resources:
           limits:
